@@ -1,3 +1,8 @@
+2009-04-02  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/39595
+	* gfortran.dg/vect/O3-pr39595.f: New test.
+
 2009-04-02  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.dg/tree-ssa-vrp47.c: XFAIL two dump scans for powerpc.
